syntax = "proto3";

package org.opencb.cellbase.grpc;
option java_outer_classname = "TranscriptModel";

message Xref {
	string id = 1;
	string db_name = 2;
	string db_display_name = 3;
	string description = 4;
}

message TranscriptTfbs {
	string tf_name = 1;
	string pwm = 2;
	string chromosome = 3;
	int32 start = 4;
	int32 end = 5;
	string strand = 6;
	int32 relative_start = 7;
	int32 relative_end = 8;
	float score = 9;
}

message Exon {
	string id = 1;
	string chromosome = 2;
	int32 start = 3;
	int32 end = 4;
	string strand = 5;
	int32 genomic_coding_start = 6;
	int32 genomic_coding_end = 7;
	int32 cdna_coding_start = 8;
	int32 cdna_coding_end = 9;
	int32 cds_start = 10;
	int32 cds_end = 11;
	int32 phase = 12;
	int32 exon_number = 13;
	string sequence = 14;
}

message Transcript {
    string id = 1;
	string name = 2;
	string chromosome = 3;
	int32 start = 4;
	int32 end = 5;
	string biotype = 6;
	string status = 7;
	string strand = 8;
	int32 genomic_coding_start = 9;
	int32 genomic_coding_end = 10;
	int32 cdna_coding_start = 11;
	int32 cdna_coding_end = 12;
	int32 cds_length = 13;
	string cdna_sequence = 14;
	string protein_id = 15;
	string protein_sequence = 16;
	string description = 17;
	repeated Xref xrefs = 18;
	repeated TranscriptTfbs tfbs = 19;
	repeated Exon exons = 20;
	repeated string annotation_flags = 21;
}